@@ -1,5 +1,5 @@
 /*
-    Copyright 2001-2013, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2001-2014, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -89,6 +89,12 @@ namespace fostlib {
 
     /// Return a path unique pathname
     FOST_CORE_DECLSPEC boost::filesystem::wpath unique_filename();
+
+
+    /// Join two paths. If path is rooted it is returned, otherwise it is joined to root
+    FOST_CORE_DECLSPEC boost::filesystem::wpath join_paths(
+        const boost::filesystem::wpath &root,
+        const boost::filesystem::wpath &path);
 
 
 }
